--- a/store/templates/store/footwear.html
+++ b/store/templates/store/footwear.html
@@ -50,7 +50,7 @@
         {% else %}
             <div class="col-12 text-center">
                 <div class="py-5">
-                    <i class="bi bi-boot text-muted" style="font-size: 4rem;"></i>
+                    <img src="/static/images/runner.png" alt="Footwear" style="width: 4rem; height: 4rem;">
                     <h3 class="mt-3 text-muted">No Footwear Available</h3>
                     <p class="text-muted">Check back soon for our latest footwear collection!</p>
                 </div>
